created feature to upload grades and retrieve them

--- a/modules/core/client/views/profile.client.view.html
+++ b/modules/core/client/views/profile.client.view.html
@@ -136,6 +136,18 @@
 
     </div>
   </div>
+
+  <div class = "row">
+     <ul ng-repeat="grade in studentGrades">
+     <!--  <li ng-repeat="(key, val) in grade">
+        {{key}} : {{val}} : {{val.score}}
+    
+      </li> -->
+      <li ng-repeat = "score in grade.studentName">
+      </li>
+    </ul>
+  </div>
+
   <hr>
 </div>
 
