--- a/modules/core/client/views/profile.client.view.html
+++ b/modules/core/client/views/profile.client.view.html
@@ -138,13 +138,9 @@
   </div>
 
   <div class = "row">
-  <h1>Grades</h1>
-     <ul ng-repeat="grade in studentGrades">
-      <li ng-repeat="(key, val) in grade">
-        {{key}} : {{val}} : {{val.studentName}}
-    
-      </li>
-      
+    <h1>Grades</h1>
+    <ul ng-repeat="grade in studentGrades">
+      <li> {{grade.category}} : {{grade.score}} </li>
     </ul>
   </div>
 
