--- a/modules/core/client/views/profile.client.view.html
+++ b/modules/core/client/views/profile.client.view.html
@@ -76,6 +76,18 @@
           </div>
         </uib-accordion-group>
 
+        <!--
+        <div class="container">
+          <h2>Progress Bar With Label</h2>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+              70%
+            </div>
+          </div>
+        </div>
+       -->
+
+
     </div>
 
     <div class="col-md-9 col-md-offset-3" ng-hide="profileVisible">
