--- a/modules/core/client/views/studentProfileTeacherView.client.view.html
+++ b/modules/core/client/views/studentProfileTeacherView.client.view.html
@@ -1,9 +1,11 @@
-<div class="container" ng-controller="ProfileController">
+<div class="container" ng-controller="StudentGetController">]
+  <div style="margin-top: 100px;">
+    </div>
   <hr>
   <div class="row">
     <div id="left-side" class="list-view ">
       <h1 id="section-tabs-header">
-        {{user.firstName}} {{user.lastName}}
+        <h2> Username: {{userFinal}} </h2>
       </h1>
 
     </div>
@@ -34,12 +36,15 @@
       <div class="col-lg-3">
         <div class = "col-lg-8">
           <label>Email</label>
-          <span>{{user.email}}</span>
+          <span>{{emailFinal}}</span>
           <label>Username</label>
-          <span>{{user.userName}}</span>
+          <span>{{userFinal}}</span>
+          <label>First Name</label>
+          <span>{{firstnameFinal}}</span>
+          <label>Last Name</label>
+          <span>{{lastnameFinal}}</span>
         </div>
-      </div>
-      
+      </div> 
     </div>
   <!--</div>-->
 
