--- a/modules/users/client/views/studentlist.client.view.html
+++ b/modules/users/client/views/studentlist.client.view.html
@@ -7,11 +7,12 @@
     
             <div class="list-group">
             <h3 class="list-group-item-heading">Name</h3>
-  			<a ng-repeat="d in data"class="list-group-item" ui-sref="teacherProfileTeacherView({username: user, email: email, firstname: firstname, lastname: lastname})" ng-click="getName(d)">
+  			<a ng-repeat="d in data"class="list-group-item" data-ui-sref="teacherProfileTeacherView({username: user, email: email, firstname: firstname, lastname: lastname})" ng-click="getName(d)">
                 
 
                  <div class="list-group-item-heading">
                 {{d.displayName}}
+
                 </div>
   			
   				
