--- a/modules/core/client/views/profile.client.view.html
+++ b/modules/core/client/views/profile.client.view.html
@@ -71,21 +71,13 @@
           <p>{{group.content}}</p>
           <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="{{group.progress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{group.progress}}%;">
-              <span class="sr-only">{{group.progress}}% Complete</span>
+              {{group.progress}}% Complete
             </div>
           </div>
         </uib-accordion-group>
 
-        <!--
-        <div class="container">
-          <h2>Progress Bar With Label</h2>
-          <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-              70%
-            </div>
-          </div>
-        </div>
-       -->
+
+        
 
 
     </div>
