--- a/modules/quiz/client/css/quiz.css
+++ b/modules/quiz/client/css/quiz.css
@@ -1,13 +1,16 @@
 @font-face {
   font-family: AwesomeFont;
-  src: url(/modules/core/client/img/fonts/fontawesome-webfont.woff);
+  src: url('/modules/core/client/img/fonts/fontawesome-webfont.eot?#iefix') format('embedded-opentype'),
+        url('/modules/core/client/img/fonts/fontawesome-webfont.woff') format('woff'),
+        url('/modules/core/client/img/fonts/fontawesome-webfont.ttf')  format('truetype'),
+        url('/modules/core/client/img/fonts/fontawesome-webfont.svg#svgFontName') format('svg');
 }
 
 body {
   font-family: AwesomeFont, Verdana, Geneva, sans-serif;
 }
 
-#startButton {
+.startButton {
 	color: black;
 	margin-top: 100px;
 	border-style: solid;
