--- a/modules/core/client/views/about.client.view.html
+++ b/modules/core/client/views/about.client.view.html
@@ -1,5 +1,6 @@
 <div ng-controller="AuthenticationController">
     
+    <!--header-->
     <div class="breadcrumbh" id="breadcrumbh">
     	<div class="row topmargin-b">
         	<div class="col-md-2 col-md-offset-1 page-head">
@@ -11,6 +12,7 @@
     	</div>
     </div>
     
+    <!--About-->
    	<div class="container">
     	<div class="row">
         	<div class="col-md-6">
@@ -23,6 +25,7 @@
             	</div>
             </div> <!--column-->
             
+            <!--picture-->
             <div class="col-md-6">
             	<div class="head con">
             		<a href="http://biotility.research.ufl.edu/"><img class="center" src="modules/core/client/img/brand/logo2.png" alt="" style="width: 500px;"></a>
@@ -31,6 +34,7 @@
             
         </div> <!--row -->
         
+        <!--about the Bace-->
         <div class="head about-ssub" style="margin-top: 40px;">
         	About the BACE
         </div>
@@ -45,5 +49,5 @@ The knowledge exam can be administered by an approved proctor via a computer-bas
     </div> <!--container -->
         
         
-
+<!--footer-->
 <div class="text-center footer" style="margin-top: 100px;">&copy; Biotility, 2015.</div>
