--- a/modules/core/client/views/contact.client.view.html
+++ b/modules/core/client/views/contact.client.view.html
@@ -1,5 +1,6 @@
 <div ng-controller="AuthenticationController">
     
+    <!--header-->
     <div class="breadcrumbh" id="breadcrumbh">
     	<div class="row topmargin-b">
         	<div class="col-md-2 col-md-offset-1 page-head">
@@ -15,6 +16,7 @@
     	Our Team
     </div>
     
+    <!--Lori contact-->
     <div class="container row">
     	<div class="col-md-3 col-md-offset-1">
         	<img class="center circle bord" src="modules/core/client/img/contact/lori.jpg" style="width: 80%;">
@@ -31,7 +33,7 @@
         </div> <!--column-->
     </div><!--row-->
    	
-        
+    <!--Tammy-->    
     <div class="container row" style="margin-top: 50px;">
     	<div class="col-md-3 col-md-offset-1">
         	<img class="center circle bord" src="modules/core/client/img/contact/tammy.jpg" style="width: 80%;">
@@ -49,6 +51,7 @@
     </div><!--row-->
         
 
+<!--footer-->
 <div class="text-center footer" style="margin-top: 100px;">&copy; Biotility, 2015.</div>
 
 </div>
