--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -46,6 +46,7 @@
   <div class="navbar-brand pull-right">
     <a data-ui-sref="about">About Us</a>
   </div>
+  <!--Home-->
   <div class="navbar-brand pull-right">
     <a data-ui-sref="home">Home</a>
   </div>
