--- a/modules/users/client/views/authentication/signin.client.view.html
+++ b/modules/users/client/views/authentication/signin.client.view.html
@@ -1,5 +1,7 @@
 
 <div ng-controller="AuthenticationController">
+
+<!--header-->
     <div class="breadcrumbh">
     	<div class="row topmargin-b">
         	<div class="col-md-2 col-md-offset-1 page-head">
@@ -24,27 +26,30 @@
                  </div>
             </div>
         </div>
+        
         <!-- log-in button -->
         <div class="topmargin-10" style="text-align:center;">
             <!--modal-->
+            
             <script type="text/ng-template" id="myModalContent.html">
             <div class="modal-header">
             <h3>Attempting to Log-in...</h3>
             </div>
-
-
-    </script>
+			</script>
+            
+            <!--login button-->
             <button type="submit" ng-click="open()" class="btn btn-default">
                 Log-in
             </button>
             <div ng-show="selected">Selection from a modal: {{ selected }}</div>
         </div>
     </form>
+    
     <!-- register link -->
     <div class="registerLink topmargin-10" style="text-align:center;">
         <a data-ui-sref="authentication.signup">Don't have an account? Click here to register.</a>
     </div>
 </div>
 
-
+<!--footer-->
  <div class="text-center footer" style="margin-top: 100px;">&copy; Biotility, 2015.</div>
