--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,4 +1,6 @@
 <div class="margin-top-50 content-main" ng-controller="MainController">
+
+<!--Carousel-->
   <div id="main-carousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -73,5 +75,6 @@
     </div>
   </div>
 </div>
+<!--footer-->
 <div class="text-center footer">&copy; Biotility, 2015.</div>
 </div>
