--- a/modules/quiz/client/css/quiz.css
+++ b/modules/quiz/client/css/quiz.css
@@ -15,3 +15,15 @@ body {
 	margin-top: 100px;
 	border-style: solid;
 }
+
+.results-h{
+	font-size: 80px;
+	text-align: center;
+	margin-top: -50px;
+}
+
+.results-s{
+	margin-top: 30px;
+	font-size: 30px;
+	text-align: center;
+}
