--- a/modules/quiz/client/views/quizResults.client.view.html
+++ b/modules/quiz/client/views/quizResults.client.view.html
@@ -1,12 +1,12 @@
-<div class = "margin-top-50" ng-controller = "QuizResults">
-	<div style="margin-top: 100px;">
+<div ng-controller = "QuizResults">
+	<div>
         <!-- Using this for space -->
     </div>
 		<div class = "container" >
 			<br>
-			<h1> Yay you finished the section</h1>
-			<div id = "results" >
-				<h2> You got a {{score}} / {{totalNumQuestion}}!</h2>
+			<div class="results-h"> Congratulations!</div>
+			<div class="results-s" id = "results" >
+				You got {{score}} / {{totalNumQuestion}} questions correct.
 			</h2>
 		</div>
 </div>
