--- a/modules/quiz/client/views/quizTemplate.client.view.html
+++ b/modules/quiz/client/views/quizTemplate.client.view.html
@@ -1,5 +1,23 @@
+<div ng-controller="SubjectController">
+
+	<!--header-->
+	<div class="breadcrumbh" id="breadcrumbh">
+    	<div class="row topmargin-b">
+        	<div class="col-md-2 col-md-offset-1 page-head">
+            	Quiz
+            </div>
+            <div class="col-md-8 b-head">
+            	<a data-ui-sref="home">Home</a> / {{subject}} / Quiz
+            </div>
+    	</div>
+    </div>
+    
+</div>
+
+
+
 <div ui-view class = "margin-top-50" ng-controller = "QuizController" ng-init = "getQuestion()">
-    <div style="margin-top:100px;">
+    <div>
         <!-- Using this for space -->
     </div>
 	<div class = "container" >
@@ -41,3 +59,6 @@
   		</div>
 	</div>
 </div>
+
+<!--footer-->
+<div class="text-center footer" style="margin-top: 100px;">&copy; Biotility, 2015.</div>
