pop ups and comments

--- a/modules/core/client/views/studentProfileTeacherView.client.view.html
+++ b/modules/core/client/views/studentProfileTeacherView.client.view.html
@@ -1,3 +1,4 @@
+<!--what a teacher sees when they click a student-->
 <div class="container" ng-controller="StudentGetController">]
   <div style="margin-top: 100px;">
     </div>
@@ -13,7 +14,7 @@
     <div class="col-md-3">
       <div class="text-center">
         
-
+        <!--profile menu-->
         <input type="file" class="form-control">
 
         <nav aria-label="context" role="navigation">
@@ -32,6 +33,7 @@
         <i class="fa fa-coffee"></i>
         This is an <strong>.alert</strong>. Use this to show important messages to the user.
       </div> -->
+      <!--student info-->
       <h3>Personal info</h3>
       <div class="col-lg-3">
         <div class = "col-lg-8">
@@ -48,6 +50,8 @@
     </div>
   <!--</div>-->
 
+
+  <!-- info for classes-->
   <div class="row">
     <div class="col-md-9 col-md-offset-3" ng-show="profileVisible">
       <h1>Biotility</h1>
