--- a/modules/users/client/views/studentlist.client.view.html
+++ b/modules/users/client/views/studentlist.client.view.html
@@ -4,12 +4,12 @@
     <div class="page-header">
         <h1>Students</h1>
     </div>
-    
+            <!--list ofstudents in  roows-->
             <div class="list-group">
             <h3 class="list-group-item-heading">Name</h3>
   			<a ng-repeat="d in data"class="list-group-item" data-ui-sref="teacherProfileTeacherView({username: user, email: email, firstname: firstname, lastname: lastname})" ng-click="getName(d)">
                 
-
+              <!--name displayed in row-->
                  <div class="list-group-item-heading">
                 {{d.displayName}}
 
