--- a/modules/core/client/views/profile.client.view.html
+++ b/modules/core/client/views/profile.client.view.html
@@ -37,7 +37,7 @@
       <div class="col-lg-3">
         <div class = "col-lg-8">
           <label>Email</label>
-          <span>{{user.email}}</span>
+          <span>{{user.email}}</span><br>
           <label>Username</label>
           <span>{{user.userName}}</span>
         </div>
