--- a/modules/core/client/views/profile.client.view.html
+++ b/modules/core/client/views/profile.client.view.html
@@ -14,7 +14,7 @@
         <img ng-src="{{authentication.user.profileImageURL}}" alt="" class="img-circle user-pic">
         <h6>Upload a different photo...</h6>
 
-        // student profile picture.. for some reason doesnt store pic after refresh
+        <!-- student profile picture.. for some reason doesnt store pic after refresh -->
         <input type="file" class="form-control">
 
         <nav aria-label="context" role="navigation">
@@ -35,7 +35,7 @@
         This is an <strong>.alert</strong>. Use this to show important messages to the user.
       </div> -->
 
-      // visual rep of student username and email
+      <!-- visual rep of student username and email-->
       <h3>Account Information</h3>
       <div class="col-lg-3">
         <div class = "col-lg-8">
@@ -51,7 +51,7 @@
     </div>
   <!--</div>-->
 
-   // for teacher profile.. will allow teachers not to view student settings
+   <!-- for teacher profile.. will allow teachers not to view student settings -->
   <div class="row" ng-hide="isTeacher">
     <div class="col-md-9 col-md-offset-3" ng-show="profileVisible">
       <h1>Biotility</h1>
@@ -70,7 +70,7 @@
         </div>
       </script>
 
-  // allows students and teachers to see progress bar ref students progress
+    <!-- allows students and teachers to see progress bar ref students progress -->
       <uib-accordion close-others="oneAtATime">
         <uib-accordion-group heading="{{group.title}}" ng-repeat="group in groups">
           <p>{{group.content}}</p>
@@ -149,7 +149,7 @@
           <label class="col-md-3 control-label"></label>
           <div class="col-md-8">
 
-            // save changes needs a function to be added .. TODO
+            <!-- save changes needs a function to be added .. TODO -->
             <input type="button" class="btn btn-primary" value="Save Changes">
             <span></span>
             <input type="reset" class="btn btn-default" value="Cancel">
@@ -161,7 +161,7 @@
     </div>
   </div>
 
-    // accordian that is used to view student subjects
+    <!-- accordian that is used to view student subjects-->
     <div class="row" ng-show="isTeacher">
       <div class="col-md-9 col-md-offset-3" ng-show="profileVisible">
         <h1>Biotility</h1>
@@ -180,20 +180,20 @@
           </div>
         </script>
 
-    // closes the rest of the accordian as one is opened
-        <uib-accordion close-others="oneAtATime">
-          <uib-accordion-group heading="{{group.title}}" ng-repeat="group in groups">
-            <p>{{group.content}}</p>
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="{{group.progress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{group.progress}}%;">
-                <span class="sr-only">{{group.progress}}% Complete</span>
-              </div>
-            </div>
-          </uib-accordion-group>
+        <!--  closes the rest of the accordian as one is opened -->
+            <uib-accordion close-others="oneAtATime">
+              <uib-accordion-group heading="{{group.title}}" ng-repeat="group in groups">
+                <p>{{group.content}}</p>
+                <div class="progress">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="{{group.progress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{group.progress}}%;">
+                    <span class="sr-only">{{group.progress}}% Complete</span>
+                  </div>
+                </div>
+              </uib-accordion-group>
 
-      </div>
+          </div>
 
-      // setup for setting tab.. displays first & last name, user, school, timezone (might not be needed)
+      <!-- setup for setting tab.. displays first & last name, user, school, timezone (might not be needed) -->
       <div class="col-md-9 col-md-offset-3" ng-hide="profileVisible">
         <!-- change for to just a list or table or something -->
         <form class="form-horizontal" role="form">
@@ -261,7 +261,7 @@
             <label class="col-md-3 control-label"></label>
             <div class="col-md-8">
 
-              // save changes button needs a function to be added
+              <!-- save changes button needs a function to be added -->
               <input type="button" class="btn btn-primary" value="Save Changes">
               <span></span>
               <input type="reset" class="btn btn-default" value="Cancel">
@@ -276,14 +276,14 @@
 
   </div>
 
-// Grade display.. applications is the only link from backend as of now
-  <div class = "row">
-    <h1>Grades</h1>
-    <ul ng-repeat="grade in studentGrades">
-      <li> {{grade.category}} : {{grade.score}} </li>
-    </ul>
+  <!-- Grade display.. applications is the only link from backend as of now -->
+    <div class = "row">
+      <h1>Grades</h1>
+      <ul ng-repeat="grade in studentGrades">
+        <li> {{grade.category}} : {{grade.score}} </li>
+      </ul>
+    </div>
+
+
+    <hr>
   </div>
-
-
-  <hr>
-</div>
